test/Sema/circularity_multifile_error.code
// RUN: %target-language-frontend -emit-silgen -verify -primary-file %s %S/Inputs/circularity_multifile_error_helper.code

// https://github.com/apple/language/issues/47171

struct A {
  var b: AnUndefinedType // expected-error {{cannot find type 'AnUndefinedType' in scope}}
}

struct B {
  var a : External
}
